--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "mern_login",
   "version": "1.0.0",
   "description": "login",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon server.js"
   },
   "proxy": "http://localhost:4001/",
   "author": "mayank",
